# eda-dlya-begemota

./: CMakeLists.txt  bash.sh  functions.h  grades.h  kp9.cpp  lab24.cpp  list_s_pary.cpp  main.cpp  main.py  person.h  stack.cpp  stack.h  student_database.h  test.cpp
4_sem_SP_1/: CMakeLists.txt  lab1.c
first course/: CMakeLists.txt  bash.sh  data.txt  functions.h  kp6.cpp  lab26.cpp  list.cpp  list_s_pary.cpp  main.py  person.h  student_database.h  test.cpp  trees.cpp  КР ДМ Миронов.docx
gtest/: CMakeLists.txt  main.cpp  tests.cpp
lab1/: CMakeLists.txt  task1.cpp  task10.cpp  task2.cpp  task5.cpp  task6.cpp  task9_1.cpp
lab1_task1/: CMakeLists.txt  task1.cpp
lab1_task10/: CMakeLists.txt  task10.cpp
lab1_task2/: CMakeLists.txt  task2.cpp
lab1_task3/: CMakeLists.txt  task3.cpp
lab1_task4/: CMakeLists.txt  task4.cpp
lab1_task5/: CMakeLists.txt  task5.cpp
lab1_task6/: CMakeLists.txt
lab1_task7/: CMakeLists.txt  task7.cpp
lab1_task8/: CMakeLists.txt  task8.cpp
lab1_task9/: CMakeLists.txt  task9.cpp  task9_1.cpp
lab2/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c  task7.c  task8.c  task9.c
lab3/: CMakeLists.txt  task1.c  task3.c  task5.c  task6.c  task7.c  test.c
lab3/files/: in3.txt
lab4/: 1111.c  CMakeLists.txt  task1.c
lab4/files/: in4_1.txt  temp.txt
lab5/: CMakeLists.txt  in.txt  in5.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
sys_prog_1-1/: CMakeLists.txt
sys_prog_1-2/: CMakeLists.txt  lab2.c  mask1.txt
