cmake_minimum_required(VERSION 3.28)
project(eda-dlya-begemota)


set(CMAKE_CXX_STANDARD 20)


add_subdirectory(lab1_task1)
add_subdirectory(lab1_task2)
add_subdirectory(lab1_task3)
add_subdirectory(lab1_task4)
add_subdirectory(lab1_task5)
add_subdirectory(lab1_task6)
add_subdirectory(lab1_task7)
add_subdirectory(lab1_task8)
add_subdirectory(lab1_task9)
add_subdirectory(lab1_task10)