add_executable(lab1_task1 task1.cpp)
add_executable(lab1_task2 task2.cpp)
add_executable(lab1_task3 task3.cpp)
add_executable(lab1_task4 task4.cpp)
add_executable(lab1_task5 task5.cpp)
add_executable(lab1_task6 task6.cpp)
add_executable(lab1_task7 task7.cpp)
add_executable(lab1_task8 task8.cpp)
add_executable(lab1_task9 task9.cpp)
add_executable(lab1_task9_1 task9_1.cpp)
add_executable(lab1_task10 task10.cpp)